tests/tests/ui-unstable/non-lit.stderr
error: proc macro panicked
  --> $DIR/non-lit.rs:15:5
   |
15 |     indoc!(fail);
   |     ^^^^^^^^^^^^^
   |
   = help: message: argument must be a single string literal

error: aborting due to previous error

